--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -6,6 +6,8 @@
     <title>forEach loop</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>JavaScript Methods Challenge</h1>
+  </body>
   <script src="script.js"></script>
 </html>
